Add Google Analytics code

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,3 +1,4 @@
 site_name: Neighbours Can Help
 live_site_url: http://neighbours.yoomee.com
 admin_email: admin@neighbourscanhelp.co.uk
+google_analytics: UA-33522161-1
