Add site_email to settings

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,4 +1,5 @@
 site_name: Neighbours Can Help
+site_email: info@neighbourscanhelp.co.uk
 live_site_url: http://neighbours.yoomee.com
 admin_email: admin@neighbourscanhelp.co.uk
 google_analytics: UA-33522161-1
