--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -35,7 +35,8 @@ jquery-ui/ui-icons_ffffff_256x240.png: jquery-ui/ui-icons_ffffff_256x240-e7e3889
 loader-circle.gif: loader-circle-f863c9563af2ecc2d5c317b50a762550.gif
 loader-long.gif: loader-long-caa0f066d2677a830935b6ee49898da9.gif
 loader-square.gif: loader-square-385b70624cc94017209ecc4a21490252.gif
+redactor_image_upload_error.png: redactor_image_upload_error-813aad6b1e2ce7476faca6e60a759623.png
 jquery-ui-1.8.18.min.js: jquery-ui-1.8.18.min-dff515822d55d13f64b01beeeb73eaff.js
 jquery-ui-1.8.18.css: jquery-ui-1.8.18-525b8fc57478eb4d921d21ea053f2634.css
-application.js: application-95904d7341bfcb43ec085cb9d9e98b3b.js
-application.css: application-4457040d3251a96eb3b69cac0d8a73ac.css
+application.js: application-ecae4f13a368a91a565bf5be1244c850.js
+application.css: application-1b9b4772ae3ab6f3bafcf711e8926a12.css
