--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,5 +1,5 @@
 site_name: Neighbours Can Help
-site_email: info@neighbourscanhelp.co.uk
+site_email: info@neighbourscanhelp.org.uk
 live_site_url: http://neighbourscanhelp.org.uk
 admin_email: admin@neighbourscanhelp.co.uk
 google_analytics: UA-33522161-1
