--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -5,14 +5,27 @@ fontawesome-webfont.ttf: fontawesome-webfont-e539183cb13c2cb1cffa5f1e60ea2719.tt
 fontawesome-webfont.woff: fontawesome-webfont-de9f41115a78ef66e51be4bcc6f28d6b.woff
 bg.png: bg-477738ce2c0a289e12f1e0ccc2b52b7b.png
 chosen-sprite.png: chosen-sprite-5e0df0015532cd94201b3992e7affac6.png
+comic-1.jpg: comic-1-364ddcd88d805569a20419a216c827c9.jpg
+comic-2.jpg: comic-2-58a865812534bd630dabbbbfe428b693.jpg
+comic-3.jpg: comic-3-ebb0f35b65a2bcb3273f1870f76f484d.jpg
+comic-4.jpg: comic-4-8e6de58ab8c6e3a8a57a1c6767d669df.jpg
+comic-5.jpg: comic-5-4a7be97e74d15e43f88136e6ecad3f63.jpg
+comic-6.jpg: comic-6-8487761862cc38bca7e24cf6d0405de1.jpg
 home_intro.png: home_intro-6288cbe903f8c4e526b2676c8fdb66d4.png
+how-it-works-map.jpg: how-it-works-map-9c27cfaa3218a9424b371bf8fdeae38e.jpg
+logo-intro.png: logo-intro-b6eaef3bad07dd5dfdcdde1664cb5fed.png
 logo.png: logo-10127f1e79f08591c57de4cf7530104f.png
 map.png: map-f33f65f8fbb7c8a38b70569362a197c8.png
 nominet_logo.png: nominet_logo-07300095d513f4033a1c76ad0f4c09ea.png
+pencil-line.png: pencil-line-e89fc06545a87fa523f671eac7bcf8f7.png
 person.png: person-f5e3f92e3468f215c6a158401d125ef2.png
+security.jpg: security-e663f8c186790944bd8dc82d212ba69c.jpg
+to-top-link.png: to-top-link-e8164f68fbc21b6e3d938637258242a5.png
 validated-icon.png: validated-icon-614ae7ecf361a897877ae0c8a6441cd9.png
 yoomee_logo.png: yoomee_logo-81a26569424b63e1e20f4a502aa405fd.png
 chosen.koenpunt.jquery.js: chosen.koenpunt.jquery-e55b1223c2a41af7e4be2abee18bfad8.js
+jquery.localscroll.js: jquery.localscroll-93b4b32654f54d8bbadc9874606b4d23.js
+jquery.scrollTo.js: jquery.scrollTo-3a8d243e0024a6f21d18fad8d8f53fa6.js
 rails.validations.js: rails.validations-d7473b8840f5d0dd36c041567b644afc.js
 jquery.iframe-transport.js: jquery.iframe-transport-cd8c19f535a2be5f0330f92142ae3842.js
 jquery.remotipart.js: jquery.remotipart-6816976a6b97ebbf84d9a1073c9327b8.js
@@ -37,7 +50,7 @@ loader-circle.gif: loader-circle-f863c9563af2ecc2d5c317b50a762550.gif
 loader-long.gif: loader-long-caa0f066d2677a830935b6ee49898da9.gif
 loader-square.gif: loader-square-385b70624cc94017209ecc4a21490252.gif
 redactor_image_upload_error.png: redactor_image_upload_error-813aad6b1e2ce7476faca6e60a759623.png
-jquery-ui-1.8.18.min.js: jquery-ui-1.8.18.min-dff515822d55d13f64b01beeeb73eaff.js
+jquery-ui-1.8.23.js: jquery-ui-1.8.23-248a0ac88e98ecc0bbe895ab2f7713ce.js
 jquery-ui-1.8.18.css: jquery-ui-1.8.18-525b8fc57478eb4d921d21ea053f2634.css
-application.js: application-fc3e6b53e172d8722c72f7e43e91af18.js
-application.css: application-57a55aedca1653af08a9845951d0f84e.css
+application.js: application-d74d632c3780f54e883e48f55c157678.js
+application.css: application-3f1946c7b7e997fa9359dd90aa46762c.css
