Share on Facebook and Twitter

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -3,3 +3,4 @@ site_email: info@neighbourscanhelp.org.uk
 live_site_url: http://neighbourscanhelp.org.uk
 admin_email: admin@neighbourscanhelp.org.uk
 google_analytics: UA-33522161-1
+facebook_app_id: 448703455184821
