--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -54,6 +54,8 @@ loader-square.gif: loader-square-385b70624cc94017209ecc4a21490252.gif
 redactor_image_upload_error.png: redactor_image_upload_error-813aad6b1e2ce7476faca6e60a759623.png
 jquery-ui-1.8.23.js: jquery-ui-1.8.23-248a0ac88e98ecc0bbe895ab2f7713ce.js
 jquery-ui-1.8.18.css: jquery-ui-1.8.18-525b8fc57478eb4d921d21ea053f2634.css
-application.js: application-09b2e1a990179a7af3648d8f720be7fd.js
-application.css: application-b23c6c4c3c873f6a45dd787902592779.css
+application.js: application-2b627e82923419fe2adcd8a712c5ee0d.js
+application.css: application-0997868073fc490a027b17621281844b.css
 ie6.css: ie6-f9dc129c36c733a6ed2559ed155029ea.css
+markerclusterer.js: markerclusterer-159a8d36dd22234352640dcc63245e5d.js
+overlappingmarkerspiderfier.js: overlappingmarkerspiderfier-faff33c125ed58d1f2bb4d30c47b24f4.js
