--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -22,6 +22,7 @@ nominet_logo.png: nominet_logo-07300095d513f4033a1c76ad0f4c09ea.png
 pencil-line.png: pencil-line-e89fc06545a87fa523f671eac7bcf8f7.png
 person.png: person-f5e3f92e3468f215c6a158401d125ef2.png
 security.jpg: security-e663f8c186790944bd8dc82d212ba69c.jpg
+tag-selector-row-2.png: tag-selector-row-2-356117bb27735b9faf6a700b10f7d221.png
 to-top-link.png: to-top-link-e8164f68fbc21b6e3d938637258242a5.png
 validated-icon.png: validated-icon-614ae7ecf361a897877ae0c8a6441cd9.png
 yoomee_logo.png: yoomee_logo-81a26569424b63e1e20f4a502aa405fd.png
@@ -55,7 +56,7 @@ redactor_image_upload_error.png: redactor_image_upload_error-813aad6b1e2ce7476fa
 jquery-ui-1.8.23.js: jquery-ui-1.8.23-248a0ac88e98ecc0bbe895ab2f7713ce.js
 jquery-ui-1.8.18.css: jquery-ui-1.8.18-525b8fc57478eb4d921d21ea053f2634.css
 application.js: application-f51e22a67553dad63b0c90416b6af1ed.js
-application.css: application-c636dad9746e8e5c4349a115967f6036.css
+application.css: application-cdb79ed859ca15f27cbd8229032750d8.css
 ie6.css: ie6-f9dc129c36c733a6ed2559ed155029ea.css
 markerclusterer.js: markerclusterer-159a8d36dd22234352640dcc63245e5d.js
 overlappingmarkerspiderfier.js: overlappingmarkerspiderfier-faff33c125ed58d1f2bb4d30c47b24f4.js
