--- a/config/settings.yml
+++ b/config/settings.yml
@@ -4,3 +4,8 @@ live_site_url: http://neighbourscanhelp.org.uk
 admin_email: admin@neighbourscanhelp.org.uk
 google_analytics: UA-33522161-1
 facebook_app_id: 448703455184821
+company_address: '7 Brompton Road, Sheffield S9 2PA'
+rose_phone: 0114 244 3623
+rose_email: rose.woodfine@neighbourscanhelp.org.uk
+facebook_url: https://www.facebook.com/NeighboursCanHelp
+twitter_url: https://twitter.com/NeighbrsCanHelp
