Started preauth using PaymentSense

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -9,3 +9,6 @@ rose_phone: 0114 244 3623
 rose_email: rose.woodfine@neighbourscanhelp.org.uk
 facebook_url: https://www.facebook.com/NeighboursCanHelp
 twitter_url: https://twitter.com/NeighbrsCanHelp
+payment_sense:
+  merchant_id: NEIGHB-3298248
+  password: T46Q8G4J9F
