Facebook meta tags for prettier posts on Facebook

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,6 +1,7 @@
 site_name: Neighbours Can Help
 site_email: info@neighbourscanhelp.org.uk
 live_site_url: http://neighbourscanhelp.org.uk
+site_description: At Neighbours Can Help we'd like to join with you in making your neighbourhood a better place by helping people to help their neighbours.
 admin_email: admin@neighbourscanhelp.org.uk
 google_analytics: UA-33522161-1
 facebook_app_id: 448703455184821
