Fix acceptance comment not deleting on un-accept

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -13,3 +13,4 @@ twitter_url: https://twitter.com/NeighbrsCanHelp
 payment_sense:
   merchant_id: NEIGHB-3298248
   password: T46Q8G4J9F
+offer_acceptance_text: "I would like to accept your offer for help"
